@@ -1,7 +1,9 @@
 package com.example.roommate.services;
 
 import com.example.roommate.data.RoomEntry;
-import com.example.roommate.domain.entities.Room;
+import com.example.roommate.persistence.ItemRepository;
+import com.example.roommate.domain.models.entities.Room;
+import com.example.roommate.domain.models.values.ItemName;
 import com.example.roommate.persistence.RoomRepository;
 import com.example.roommate.persistence.exceptions.NotFoundRepositoryException;
 import org.springframework.stereotype.Service;
@@ -14,16 +16,18 @@ import java.util.UUID;
 public class RoomService {
 
     RoomRepository roomRepository;
+    ItemRepository itemRepository;
 
-    public RoomService(RoomRepository roomRepository) {
+    public RoomService(RoomRepository roomRepository, ItemRepository itemRepository) {
         this.roomRepository = roomRepository;
+        this.itemRepository = itemRepository;
     }
 
     public void addRoom(Room room) {
-        roomRepository.save(new RoomEntry(room.roomID, room.roomnumber));
+        roomRepository.save(new RoomEntry(room.getRoomID(), room.getRoomnumber()));
     }
 
-    public void removeRoom(Room room) {roomRepository.remove(room.roomID);}
+    public void removeRoom(Room room) {roomRepository.remove(room.getRoomID());}
 
     public List<Room> getRooms() {
         return roomRepository.findAll().stream().map(r -> new Room(r.roomID(), r.roomnumber())).toList();
@@ -39,7 +43,17 @@ public class RoomService {
     }
 
     public void saveAll(List<Room> rooms) {
-        roomRepository.saveAll(rooms.stream().map(r -> new RoomEntry(r.roomID, r.roomnumber)).toList());
+        roomRepository.saveAll(rooms.stream().map(r -> new RoomEntry(r.getRoomID(), r.getRoomnumber())).toList());
+    }
+
+    public List<ItemName> getItems() {
+        return itemRepository.getItems();
+        /*return roomRepository.findAll().stream()
+                .map(roomEntry -> new Room(roomEntry.roomID(), roomEntry.roomnumber()))
+                .map(Room::getItems)
+                .flatMap(List::stream)
+                .distinct()
+                .collect(Collectors.toList());*/
     }
 
 }
